Check if CSRF token is set before using it

--- a/Resources/views/ChangePassword/changePassword.html.twig
+++ b/Resources/views/ChangePassword/changePassword.html.twig
@@ -73,7 +73,7 @@
 														{% endif %}
 													</div>
 												</div>
-												{{ form_widget(form._token) }}
+												{{ form._token is defined ? form_widget(form._token) }}
 											</div>
 										</div>
 									</div>
